--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -17,19 +17,19 @@
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item active">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All"><span>Home</span></NavLink>
                 </li>
                 <li class="nav-item active">
-                    <NavLink class="nav-link" href="/#who-am-i">About me</NavLink>
+                    <NavLink class="nav-link" href="/#who-am-i"><span>About me</span></NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="articles">Articles</NavLink>
+                    <NavLink class="nav-link" href="articles"><span>Articles</span></NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="resume">Resumé</NavLink>
+                    <NavLink class="nav-link" href="resume"><span>Resumé</span></NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="portfolio">Portfolio</NavLink>
+                    <NavLink class="nav-link" href="portfolio"><span>Portfolio</span></NavLink>
                 </li>
             </ul>
             <ul class="navbar-nav">
