--- a/PersonalSite/Shared/CoverLayout.razor
+++ b/PersonalSite/Shared/CoverLayout.razor
@@ -1,8 +1,8 @@
 @inherits LayoutComponentBase
 
-<NavMenu />
+<NavMenu IsCoverPage="true" />
 
-<main class="w-100 bg-body pb-5" style="padding-top: 58px">
+<main class="w-100 bg-body pb-5">
     @Body
 </main>
 
