--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -31,6 +31,9 @@
 html,
 body {
   font-family: 'Roboto', sans-serif;
+
+  scroll-padding-top: 80px;
+  /* adjust to match your fixed header */
   scroll-behavior: smooth;
 
   overflow-x: hidden;
