--- a/PersonalSite/Pages/PostPage.razor
+++ b/PersonalSite/Pages/PostPage.razor
@@ -25,8 +25,8 @@ else
         <p>@exception.Message</p>
 
         <code>
-                                                                                                                                                             @exception.StackTrace
-                                                                                                                                                        </code>
+                                                                                                                                                                     @exception.StackTrace
+                                                                                                                                                                </code>
     }
 
     @if (post is not null)
@@ -56,7 +56,7 @@ else
 
         </div>
 
-        <div class="toc mt-4 mb-4 my-md-0 ps-xl-3 mb-lg-5 text-muted">
+        <div class="toc mt-4 mb-4 my-md-0 ps-xl-3 mb-lg-5 text-muted h-100">
             <TableOfContents />
         </div>
 
