Add article about hebrew

--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -486,3 +486,8 @@ header h2.post-subtitle {
     color: white !important;
   }
 }
+
+table.table td[colspan],
+table.table th[colspan] {
+  text-align: center;
+}
