--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -98,12 +98,7 @@
     {
         try
         {
-            await JSHost.ImportAsync("NavMenu",
-            "../Shared/NavMenu.razor.js");
-
-            InitNavbar();
-
-            InitColorModes();
+            await Init();
 
             if (IsCoverPage)
             {
@@ -114,5 +109,15 @@
         {
 
         }
+    }
+
+    public async Task Init()
+    {
+        await JSHost.ImportAsync("NavMenu",
+        "../Shared/NavMenu.razor.js");
+
+        InitNavbar();
+
+        InitColorModes();
     }
 }
