Fix sticky behavior for post table of contents

--- a/PersonalSite/Pages/PostPage.razor
+++ b/PersonalSite/Pages/PostPage.razor
@@ -56,7 +56,7 @@ else
 
         </div>
 
-        <div class="toc mt-4 mb-4 my-md-0 ps-xl-3 mb-lg-5 text-muted h-100">
+        <div class="toc mt-4 mb-4 my-md-0 ps-xl-3 mb-lg-5 text-muted">
             <TableOfContents />
         </div>
 
