--- a/PersonalSite/Pages/PostPage.razor.css
+++ b/PersonalSite/Pages/PostPage.razor.css
@@ -55,8 +55,9 @@
         top: 5rem;
         right: 0;
         z-index: 2;
-        height: calc(100vh - 7rem);
+        max-height: calc(100vh - 7rem);
         overflow-y: auto;
+        align-self: start;
     }
 }
 
