--- a/PersonalSite/Shared/TableOfContents.razor
+++ b/PersonalSite/Shared/TableOfContents.razor
@@ -2,7 +2,7 @@
 
 <strong class="h6 my-2 ms-3">On this page</strong>
 <hr class="my-2 ms-3" />
-<nav id="TableOfContents">
+<nav id="@ElementId" class="toc-nav">
 
 </nav>
 <hr class="my-2 ms-3 on-sm" />
