Improve post table of contents behavior

--- a/PersonalSite/Pages/PostPage.razor
+++ b/PersonalSite/Pages/PostPage.razor
@@ -74,7 +74,7 @@ else
                     </div>
                 </div>
 
-                <aside class="col-lg-4 col-xl-3 order-1 order-lg-2 d-none d-lg-block">
+                <aside class="col-lg-4 col-xl-3 order-1 order-lg-2 d-none d-lg-block align-self-start">
                     <div class="toc-desktop ps-xl-3 text-muted">
                         <TableOfContents ElementId="PostTocDesktop" />
                     </div>
